--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,15 +2,26 @@ html {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: black;
     text-align: center;
+    color: white;
 }
 
 h1 {
     font-size: 50px;
-    color: white;
     font-weight: normal;
 }
 
 a {
     color: aquamarine;
     font-size: 16px;
+}
+
+h2 {
+    font-weight: 300;
+    font-size: 42px;
+}
+
+#logo {
+    color: gray;
+    float: right;
+    padding-right: 10px;
 }
